--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
+		<ul>
+			<li><a href="./recipes/juicy-roasted-chicken.html">Juicy Roasted Chicken</a></li>
+			<li><a href="./recipes/ultimate-tomahawk-steak.html">Ultimate Tomahawk Steak</a></li>
+			<li><a href="./recipes/perfect-turkey.html">Perfect Turkey</a></li>
+		</ul>
 	</body>
 </html>
