--- a/recipes/perfect-turkey.html
+++ b/recipes/perfect-turkey.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
@@ -6,5 +6,6 @@
 	</head>
 	<body>
 		<h1>Perfect Turkey</h1>
+		<a href="../index.html">Home</a>
 	</body>
 </html>
