Add content and images for recipe pages

--- a/recipes/juicy-roasted-chicken.html
+++ b/recipes/juicy-roasted-chicken.html
@@ -7,5 +7,25 @@
 	<body>
 		<h1>Juicy Roasted Chicken</h1>
 		<a href="../index.html">Home</a>
+		<br>
+		<img src="https://images.pexels.com/photos/5718071/pexels-photo-5718071.jpeg" alt="roast chicken being carved with a knife and a fork" width="640"/>
+		<h2>Description</h2>
+		<p>This roasted chicken is perfectly seasoned and cooked just the way my grandmother used to make it.
+		The method used in this recipe results in the juiciest chicken! We loved to nibble on the celery after it was cooked.</p>
+		<h2>Ingredients</h2>
+		<ul>
+			<li>Chicken: This recipe starts with a 3-pound whole chicken. If your bird is larger or smaller, you'll need to adjust the recipe.</li>
+			<li>Seasoning: This roasted chicken is simply seasoned with salt, black pepper, and onion powder.</li>
+			<li>Butter: Butter locks in moisture and gives the seasonings something to adhere to.</li>
+			<li>Celery: Stuff the chicken cavity with celery for subtle vegetal flavor. Plus, the celery will release even more moisture as the chicken cooks.
+</li>
+		</ul>
+		<h2>Steps</h2>
+		<ol>
+			<li>Season the chicken inside and out.</li>
+			<li>Add the butter to the chicken and the pan.</li>
+			<li>Stuff the cavity with celery.</li>
+			<li>Bake until the chicken is fully roasted.</li>
+		</ol>
 	</body>
 </html>
