--- a/recipes/perfect-turkey.html
+++ b/recipes/perfect-turkey.html
@@ -7,5 +7,30 @@
 	<body>
 		<h1>Perfect Turkey</h1>
 		<a href="../index.html">Home</a>
+		<br>
+		<img src="https://cdn.pixabay.com/photo/2013/11/26/20/01/turkey-218742_960_720.jpg" alt="Homade roasted turkey" width="640"/>
+		<h2>Description</h2>
+		<p>Looking for the best way to cook a turkey? This easy recipe uses a simple salt brine, butter, and aromatic vegetables to guarantee juicy, perfectly seasoned, tender turkey with golden, crispy skin every time.</p>
+		<h2>Ingredients</h2>
+		<ul>
+			<li>1 (18 pound) whole turkey, neck and giblets removed</li>
+			<li>2 cups kosher salt</li>
+			<li>½ cup butter, melted, divided</li>
+			<li>2 large onions, chopped, divided</li>
+			<li>4 carrots, coarsely chopped, divided</li>
+			<li>4 stalks celery, chopped, divided</li>
+			<li>2 sprigs fresh thyme, divided</li>
+			<li>1 bay leaf</li>
+			<li>1 cup dry white wine</li>
+		</ul>
+		<h2>Steps</h2>
+		<ol>
+			<li>Rub turkey inside and out with kosher salt; place in a large stockpot and cover with cold water. Cover and refrigerate to allow turkey to soak in brine solution for 12 hours, or overnight.</li>
+			<li>Preheat the oven to 350 degrees F (175 degrees C). Remove turkey from brine and discard liquid. Pat turkey dry thoroughly with paper towels — inside and out. This removes excess moisture and also helps skin crisp during roasting.</li>
+			<li>Brush turkey with 1/2 of the melted butter.</li>
+			<li>Place the turkey breast-side down on a roasting rack in a shallow roasting pan. Stuff the cavity with half the onions, carrots, celery, one sprig of thyme, and the bay leaf. Scatter the remaining vegetables and thyme in the pan around the turkey. Pour white wine over the vegetables.</li>
+			<li>Roast turkey in the preheated oven, uncovered, until no longer pink at the bone and the juices run clear, about 3 ½ to 4 hours. Carefully turn turkey breast-side up about 2/3 through the roasting time, and brush with remaining butter. An instant-read thermometer inserted into the thickest part of the thigh, near the bone, should read 165 degrees F (74 degrees C).</li>
+			<li>Allow turkey to rest for 30 minutes before carving.</li>
+		</ol>
 	</body>
 </html>
