--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
+		<img src="https://cdn.pixabay.com/photo/2016/05/06/12/15/cook-1375788_1280.jpg" alt="Recipe book" width="360">
 		<ul>
 			<li><a href="./recipes/juicy-roasted-chicken.html">Juicy Roasted Chicken</a></li>
 			<li><a href="./recipes/ultimate-tomahawk-steak.html">Ultimate Tomahawk Steak</a></li>
